update gatsby version to make mdx work

--- a/src/data/work/CHP_optimization.mdx
+++ b/src/data/work/CHP_optimization.mdx
@@ -1,2 +1,9 @@
-Optimization of a CHP plant
-https://twitter.com/_artelys/status/1227890556120031238
+---
+title: "Optimization of a CHP plant"
+date: "2022-09-15"
+slug: "CHP"
+summary: "development of a library for modelling a Combined Heat and Power plant using MILP framework, 
+            and modelling of the power plant (physical model and electricity markets) in order to improve the bidding strategy"
+link: "https://twitter.com/_artelys/status/1227890556120031238"
+---
+
