--- a/src/data/work/GO_FR_algo.mdx
+++ b/src/data/work/GO_FR_algo.mdx
@@ -1,3 +1,10 @@
-Market clearing algorithm for the French Guarantees of Origin market
+---
+title: "Market clearing algorithm for the French Guarantees of Origin (GO) market"
+date: "2022-09-15"
+slug: "GO_FR"
+summary: "Implementation of a sequential optimization algorithm for optimal GO allocation using Knitro"
+link:"https://www.powernext.com/fr/press-release/lancement-reussi-des-encheres-mensuelles-pour-les-garanties-dorigine"
+---
 
-https://www.powernext.com/fr/press-release/lancement-reussi-des-encheres-mensuelles-pour-les-garanties-dorigine
+
+
