--- a/src/data/work/power_flow_simulator.mdx
+++ b/src/data/work/power_flow_simulator.mdx
@@ -1,3 +1,8 @@
-Serious game in React - power flow simulator
+---
+title: "Serious game in React - power flow simulator"
+date: "2022-09-15"
+slug: "powerFlow"
+summary: "Evolutions of a power flow simulator, especially to introduce market design"
+link:"https://www.tennet.eu/our-key-tasks/innovations/powerflow-simulator"
+---
 
-https://www.tennet.eu/our-key-tasks/innovations/powerflow-simulator
